--- a/module/MvaModuleTemplate/view/mva-module-template/index/index.phtml
+++ b/module/MvaModuleTemplate/view/mva-module-template/index/index.phtml
@@ -1,4 +1,14 @@
-<h1>Dog list</h1>
+<h1><?php echo $this->s_title; ?></h1>
+
+<h5>Custom view index with additional variables</h5>
+
+<div>
+<?php echo 'Cippa => '.$this->cippa; ?>
+<br>
+<?php echo 'Foo => '.$this->foo; ?>
+<br><br>
+</div>
+
 <div><a href="<?php echo $this->url('mva-module-template/default', array('controller' => 'index', 'action' => 'new'))?>">Add</a></div>
 
 <?php if (count($this->as_messages)) { ?>
