--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -35,6 +35,7 @@
                         </ul>
                         <ul class="nav">
                             <li class="active"><a href="<?php echo $this->url('mva-module-template') ?>"><?php echo $this->translate('Dog list') ?></a></li>
+                            <li class="active"><a href="/mva-module-template/custom-index"><?php echo $this->translate('Custom dog list') ?></a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
